--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=ep-late-pond-a9sclmcd-pooler.gwc.azure.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_AuBEpiJTx31K; SSL Mode=Require; Channel Binding=Require;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
