--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=ep-late-pond-a9sclmcd-pooler.gwc.azure.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_AuBEpiJTx31K; SSL Mode=Require; Channel Binding=Require;TrustServerCertificate=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Gemini": {
+    "ApiKey": ""
+  }
 }
